--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^6.1.16",
     "@react-navigation/stack": "^6.3.28",
     "axios": "^1.6.8",
+    "braintree-web": "^3.101.3",
     "react": "^18.2.0",
     "react-native": "^0.73.6",
     "react-native-dropdownalert": "^5.1.0",
@@ -38,6 +39,7 @@
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-touch-ripple": "^0.0.4",
     "react-native-vector-icons": "^10.0.3",
+    "react-native-webview": "^13.8.6",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
