update env file

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "braintree-web": "^3.101.3",
     "react": "^18.2.0",
     "react-native": "^0.73.6",
+    "react-native-dotenv": "^3.4.11",
     "react-native-dropdownalert": "^5.1.0",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-picker-select": "^9.0.1",
